--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,18 +3,15 @@
 }
 
 html, body {
-  height: 100%;
   min-height: 100%;
   font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 
 #root {
-  height: 100%;
   min-height: 100%;
 }
 
 .container {
-  height: 100%;
   width: 100%;
   min-height: 100%;
   margin: 0;
@@ -25,7 +22,6 @@ html, body {
 
 .menu {
   flex: 2;
-  height: 100%;
   min-height: 100%;
   background: white;
   box-shadow: 14.0351px 0px 25px rgba(86, 128, 248, 0.03), 35.0877px 0px 70px rgba(86, 128, 248, 0.05), 23.8596px 5.61404px 50px rgba(0, 0, 0, 0.02);
@@ -54,6 +50,7 @@ html, body {
   margin: 15px 0;
   color: #707C97;
   padding-left: 3px;
+  transition: color 150ms;
 }
 
 /*.nav a svg path {*/
