--- a/frontend/src/pages/Page.css
+++ b/frontend/src/pages/Page.css
@@ -61,3 +61,44 @@
     background: white;
 }
 
+.sub-nav {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    /*align-items: center;*/
+    justify-content: space-around;
+}
+
+.sub-nav .sub-nav-item {
+
+}
+
+.sub-nav .sub-nav-item a {
+    font-family: Roboto, Arial, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 20px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    margin: 15px 0;
+    color: #707C97;
+    padding-left: 3px;
+    transition: color 150ms;
+}
+
+.sub-nav .sub-nav-item a svg {
+    margin-right: 5px
+}
+
+.sub-nav .sub-nav-item a.active, .sub-nav .sub-nav-item a:hover {
+  cursor: pointer;
+  color: #00BBC4;
+  border-bottom: 3px solid #00BBC4;
+}
+
+.sub-nav .sub-nav-item a.active path, .sub-nav .sub-nav-item a:hover path {
+    fill: #00BBC4;
+}
